fix: fix arrows and overflow

--- a/assets/css/scss/globalComponents/_arrows.scss
+++ b/assets/css/scss/globalComponents/_arrows.scss
@@ -6,7 +6,6 @@
   align-items: center;
   background: $dark-blue;
   border-radius: toRem(6);
-  cursor: pointer;
   display: flex;
   justify-content: center;
   height: toRem(44);
